tests/NormalTests/paczka1/fuzzy1/45311021.err
Error in line 1: u3VFdL S410 37,7
Error in line 12: g9i S410 6,7
Error in line 13: A290 S77 118,4
Error in line 27: 2USYICFnDy4 S515 43,6
Error in line 32: S9HFf A290 77,7
Error in line 36: eZ94 S77 755,6
Error in line 38: eZ94 S410 a1,a
Error in line 33: S9HFf S410 91,2
